# ApexQuant

./: .gitignore  C++异常处理改进总结.md  CMakeLists.txt  COMPILATION_GUIDE.md  COMPILATION_SUCCESS.md  DEPLOYMENT.md  DEVELOPMENT_REPORT.md  Dockerfile  ENV_SETUP.md  FINAL_STATUS.md  GUI使用指南.md  INTEGRATION_COMPLETE.md  LICENSE  LIVE_TRADING_GUIDE.md  P0问题解决总结.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_DAY10.md  README_DAY2.md  README_DAY3.md  README_DAY4.md  README_DAY5.md  README_DAY6.md  README_DAY7.md  README_DAY8.md  README_DAY9.md  README_SIMULATION.md  SIMULATION_COMPLETE.md  SIMULATION_GUIDE.md  START_HERE.bat  TODO.md  TRADING_RULES_SUMMARY.md  build.bat  build.sh  deploy.sh  docker-compose.yml  quick_start.py  run_demo.py  (+19 more)
config/: config.example.yaml  simulation_config.yaml
cpp/: CMakeLists.txt
cpp/include/: backtest_engine.h  connection_manager.h  data_structures.h  indicators.h  risk_metrics.h  trading_interface.h  utils.h  websocket_client.h
cpp/include/simulation/: limit_queue.h  order_matcher.h  simulated_exchange.h  simulation_account.h  simulation_types.h
cpp/src/: backtest_engine.cpp  bindings.cpp  connection_manager.cpp  data_structures.cpp  indicators.cpp  risk_metrics.cpp  trading_interface.cpp  utils.cpp  websocket_client.cpp
cpp/src/simulation/: bindings.cpp  limit_queue.cpp  order_matcher.cpp  simulated_exchange.cpp  simulation_account.cpp
cpp/tests/: test_order_matcher_validation.cpp
deployment/grafana/dashboards/: apexquant_dashboard.json
deployment/grafana/provisioning/dashboards/: dashboard.yml
deployment/grafana/provisioning/datasources/: prometheus.yml
deployment/prometheus/: alert_rules.yml  prometheus.yml
docs/: BUILD_GUIDE.md  DAY1_SUMMARY.md  DAY2_SUMMARY.md  TRADING_RULES_ENHANCEMENT.md
examples/: example_basic.py  example_day2.py  example_day3.py  example_day4.py  example_day5.py  example_day6.py  example_day7.py  example_day8.py  example_day9.py  example_realtime_simulation.py  example_simple_backtest.py
gui/: README.md  app.py  requirements.txt  start_gui.bat  start_gui.sh
gui/pages/: 1_📊_策略回测.py  2_⚡_实时模拟.py  3_🎨_策略管理.py  4_📈_性能分析.py  5_⚙️_系统配置.py  5_🤖_AI智能分析.py  6_📊_高级策略.py  7_📊_市场分析.py  __init__.py  backtest_page.py  config_page.py  performance_page.py  realtime_page.py  strategy_page.py
python/: requirements.txt  setup.py
python/apexquant/: __init__.py  quick_demo.py
python/apexquant/adaptive/: __init__.py  log_analyzer.py  notifier.py  online_learner.py  param_optimizer.py
python/apexquant/ai/: __init__.py  data_cleaner.py  deepseek_client.py  sentiment_analyzer.py  smart_advisor.py
python/apexquant/analysis/: __init__.py  technical_indicators.py
python/apexquant/backtest/: __init__.py  ai_analyzer.py  backtest_runner.py  monte_carlo.py  optimizer.py  performance.py  plotly_charts.py  strategy.py  strategy_backtester.py
python/apexquant/data/: __init__.py  akshare_wrapper.py  data_manager.py  macro_data.py  market_sentiment.py  multi_source.py  news_fetcher.py
python/apexquant/live/: __init__.py  live_trader.py  rl_agent.py  signal_generator.py
python/apexquant/monitoring/: __init__.py  anomaly_detector.py  metrics_exporter.py
python/apexquant/risk/: __init__.py  risk_calculator.py  risk_reporter.py  stress_test.py
python/apexquant/simulation/: __init__.py  ai_advisor.py  cli.py  config.py  data_source.py  database.py  database_backup.py  mock_exchange.py  performance_analyzer.py  risk_manager.py  simulation_controller.py  stock_status.py  strategies.py  trading_calendar.py
python/apexquant/strategy/: __init__.py  ai_factor_generator.py  event_strategy.py  factor_engine.py  lstm_predictor.py  ml_model.py  multi_factor_strategy.py  pairs_trading.py
python/apexquant/utils/: __init__.py  config_manager.py  float_utils.py  model_cache.py  time_utils.py
python/apexquant/visualization/: __init__.py  chart_plotter.py  pattern_analyzer.py  predictor.py
python/examples/: run_simulation.py
python/tests/: test_bridge.py  test_day10.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py  test_integration.py  test_simulation.py
python/tests/config/: simulation_config.yaml
tests/simulation/: README.md
